[EAP6-121] Add EAP6-121 upstream but disabled